[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/UI/MangaList.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/Settings.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/Credits.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/UI/Settings.gd" type="Script" id=4]
[ext_resource path="res://Scripts/UI/exit_button.gd" type="Script" id=5]
[ext_resource path="res://Scripts/UI/C_Main.gd" type="Script" id=6]
[ext_resource path="res://Scripts/UI/Menu.gd" type="Script" id=7]
[ext_resource path="res://Scenes/UI/Controls_help.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/icon_outlined.png" type="Texture" id=9]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="C_Main" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 6 )

[node name="Panel" type="Control" parent="."]
anchor_left = 0.38
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.95

[node name="MangaList" parent="Panel" instance=ExtResource( 1 )]

[node name="Settings" parent="Panel" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="MainMenuButtons" type="VBoxContainer" parent="."]
anchor_left = 0.08
anchor_top = 0.28
anchor_right = 0.22
anchor_bottom = 0.656

[node name="resume_button" type="Button" parent="MainMenuButtons"]
visible = false
margin_right = 139.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Resume"

[node name="manga_button" type="Button" parent="MainMenuButtons"]
margin_right = 179.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Manga"

[node name="settings_button" type="Button" parent="MainMenuButtons"]
margin_top = 24.0
margin_right = 179.0
margin_bottom = 44.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Settings"

[node name="controls_button" type="Button" parent="MainMenuButtons"]
margin_top = 48.0
margin_right = 179.0
margin_bottom = 68.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Controls"

[node name="credits_button" type="Button" parent="MainMenuButtons"]
visible = false
margin_top = 72.0
margin_right = 179.0
margin_bottom = 92.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Credits"

[node name="exit_button" type="Button" parent="MainMenuButtons"]
margin_top = 72.0
margin_right = 179.0
margin_bottom = 92.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Exit"
script = ExtResource( 5 )

[node name="Popup" type="Popup" parent="."]
anchor_left = 0.38
anchor_top = 0.04
anchor_right = 1.0
anchor_bottom = 0.95

[node name="Controls_help" parent="Popup" instance=ExtResource( 8 )]

[node name="ErrorCore" type="Popup" parent="."]

[node name="Label" type="Label" parent="ErrorCore"]
margin_right = 40.0
margin_bottom = 14.0
text = "Manga not found!
Check the 'Manga Location' setting!"

[node name="CreditsPopup" type="Popup" parent="."]
anchor_left = 0.38
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.95

[node name="Credits" parent="CreditsPopup" instance=ExtResource( 3 )]

[node name="Title" type="HBoxContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.25
anchor_bottom = 0.2
alignment = 1

[node name="TitleLabel" type="Label" parent="Title"]
margin_top = 29.0
margin_right = 136.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "Sound Manga Reader "
align = 2
valign = 1

[node name="TitleLogo" type="TextureRect" parent="Title"]
margin_left = 140.0
margin_right = 256.0
margin_bottom = 72.0
rect_min_size = Vector2( 24, 24 )
rect_pivot_offset = Vector2( 11.036, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[connection signal="resized" from="." to="." method="_on_Menu_resized"]
[connection signal="visibility_changed" from="." to="." method="_on_Menu_visibility_changed"]
[connection signal="gui_input" from="MainMenuButtons/resume_button" to="." method="_on_resume_button_gui_input"]
[connection signal="mouse_entered" from="MainMenuButtons/resume_button" to="." method="_on_resume_button_mouse_entered"]
[connection signal="pressed" from="MainMenuButtons/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MainMenuButtons/manga_button" to="Panel/Settings" method="_on_manga_button_pressed"]
[connection signal="pressed" from="MainMenuButtons/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainMenuButtons/controls_button" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="MainMenuButtons/credits_button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MainMenuButtons/exit_button" to="MainMenuButtons/exit_button" method="_on_exit_button_pressed"]
